fix circle overflow

--- a/src/ng-circle.scss
+++ b/src/ng-circle.scss
@@ -3,7 +3,6 @@
 
 .ng-circle {
   position: relative;
-  overflow: hidden;
 
   &__fill {
     position: absolute;
